--- a/css/style.css
+++ b/css/style.css
@@ -303,13 +303,13 @@ footer a:hover {
 /**************************************************************************************************/
 
 
-/********************* styless for all pages without headeer and footer ***************************/
+/********************* styless for all pages without header and footer ***************************/
 
 /************* Organick *************/
 /********************* page-1 styless section ***********************/
 
 .page-1 {
-    height: 65vh;
+    height: 70vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -328,7 +328,7 @@ footer a:hover {
 .page-1-box-1 {
     position: relative;
     width: 100%;
-    height: 30vh;
+    height: 35vh;
     padding-left: 3vw;
     display: flex;
     flex-direction: column;
@@ -336,6 +336,8 @@ footer a:hover {
     align-items: start;
     gap: 1vh;
     border-radius: min(1.6vw, 3vh);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .page-1-italic {
@@ -456,12 +458,12 @@ footer a:hover {
 }
 
 .page-2-p {
-    color: #525C60;
+    color: var(--clr-black);
     font-family: 'Open Sans';
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 165.4%; /* 29.772px */
+    line-height: 165.4%;
 }
 
 .page-2-button {
@@ -636,6 +638,114 @@ footer a:hover {
 }
 
 /********************* page-4 styless section ***********************/
+.page-4 {
+    width: 100%;
+    height: 120vh;
+    background-image: url('../img/main/page-4-background.png');
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-4-body {
+    width: 60%;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.page-4-star-box,
+.page-4-cycle-rate-box {
+    display: flex;
+}
+
+.page-4-box-container {
+    position: relative;
+
+}
+
+.page-4-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    visibility: hidden;
+}
+
+.page-4-italic-green {
+    color: var(--clr-green);
+    font-family: 'Yellowtail';
+    font-size: 36px;
+    font-weight: 400;
+}
+
+.page-4-customer-img {
+    border-radius: 5000px;
+}
+
+.page-4-title {
+    color: var(--clr-blue);
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 800;
+}
+
+.page-4-p {
+    color: var(--clr-black);
+    font-family: 'Open Sans';
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%;
+}
+
+.page-4-p.font-size-18 {
+    width: 780px;
+    font-size: 18px;
+}
+
+.page-4-count {
+    color: var(--clr-blue);
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.page-4-rate-name {
+    color: var(--clr-blue);
+    text-align: center;
+    font-family: 'Open Sans';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 165.4%; /* 29.772px */
+}
+
+.page-4-customer-name {
+    color: var(--clr-blue);
+    font-family: 'Roboto';
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.page-4-selected-box {
+    visibility: visible;
+}
 
 /********************* page-5 styless section ***********************/
 
