--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,8 @@ footer a:hover {
 
 .page-3-box {
     position: relative;
+    width: 335px;
+    height: 483px;
 }
 
 .page-3-product-text-box{
@@ -630,7 +632,7 @@ footer a:hover {
 }
 
 .page-3-hr {
-    width: 100%;
+    width: 280px;
     height: 1px;
     margin-top: 1vh;
     margin-bottom: .5vh;
@@ -806,7 +808,21 @@ footer a:hover {
 }
 
 /********************* page-5 styless section ***********************/
+.page-5 {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--clr-blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.page-5-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 /********************* page-6 styless section ***********************/
 
 /********************* page-7 styless section ***********************/
