--- a/css/style.css
+++ b/css/style.css
@@ -818,11 +818,52 @@ footer a:hover {
 }
 
 .page-5-body {
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 50px;
 }
+
+.page-5-text-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.page-5-italic-green {
+    color: var(--clr-green);
+    font-family: 'Yellowtail';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.page-5-h1-white {
+    color: white;
+    font-family: 'Roboto';
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.page-5-button {
+    background-color: var(--clr-yellow);
+    border-radius: 16px;
+    width: 256px;
+    height: 79px;
+    color: #274C5B;
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 /********************* page-6 styless section ***********************/
 
 /********************* page-7 styless section ***********************/
