--- a/css/about_us_style.css
+++ b/css/about_us_style.css
@@ -585,9 +585,126 @@ h5 {
 
 
 .offers {
-    height: 80vh;
+    display: flex;
+    align-items: center;
+    min-height: 80vh;
     background-color: var(--clr-blue);
 }
+ .offers .big-p {
+    color: #fff;
+ }
+
+
+ .offers>.my-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 30%;
+ }
+.offers-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+ .offers-grid-box {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 23% 23% 23% 23% ;
+    gap: 2.2%;
+    margin-top: 3%;
+    width: 100%;
+    height: 320px;
+
+ }
+
+ .offers-box {
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5%;
+
+ }
+
+
+.offer-img {
+    border-radius: 10%;
+    background-color: white;
+    width: 100%;
+    height: 80%;
+    position: relative;
+}
+
+.offer-img > img{
+    border-radius: 10%;
+    margin: 0 auto;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+}
+
+.offers-box:nth-child(3)>.offer-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.offers-box:nth-child(3)>.offer-img>img{
+    width: 93%;
+}
+
+
+.offers-box:nth-child(4)>.offer-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.offers-box:nth-child(4)>.offer-img>img{
+    width: 70%;
+}
+
+.offers-box:nth-child(4)>.offer-img {
+    width: 100;
+    background-color: white;
+
+}
+
+.offers-box>span{
+    z-index: 1;
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**************************************************************************************************/
 
 /*********************************** footer styless part ******************************************/
