--- a/css/style.css
+++ b/css/style.css
@@ -865,6 +865,82 @@ footer a:hover {
 }
 
 /********************* page-6 styless section ***********************/
+.page-6 {
+    width: 100%;
+    height: 95vh;
+}
+
+.page-6-body {
+    position: relative;
+}
+
+.page-6-background-half-box-1 {
+    width: 50%;
+    height: 95vh;
+    background-image: url('../img/main/page-6-background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.page-6-content-box {
+    width: 42vw;
+    height: 73vh;
+    position: absolute;
+    top: 11vh;
+    right: 12vw;
+    background-color: white;
+    border-radius: 30px;
+    padding: 6vh 4.5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 3vh;
+}
+
+.page-6-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 1vh;
+}
+
+.page-6-italic-green {
+    color: var(--clr-green);
+    font-family: 'Yellowtail';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.page-6-h1 {
+    color: var(--clr-blue);
+    font-family: 'Roboto';
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.page-6-span {
+    color: var(--clr-blue);
+    font-family: 'Roboto';
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.page-6-p {
+    color: var(--clr-black);
+    font-family: 'Open Sans';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%;
+}
 
 /********************* page-7 styless section ***********************/
 
