--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ footer a:hover {
 }
 
 .header-container {
-    width: 70%;
+    width: 73%;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -317,7 +317,7 @@ footer a:hover {
 }
 
 #organick .page-1-body {
-    width: 70%;
+    width: 73%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -497,7 +497,7 @@ footer a:hover {
 
 #organick .page-3-body {
     text-align: center;
-    width: 70%;
+    width: 73%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -808,7 +808,7 @@ footer a:hover {
 }
 
 /********************* page-5 styless section ***********************/
-.page-5 {
+#organick .page-5 {
     width: 100%;
     height: 100vh;
     background-color: var(--clr-blue);
@@ -817,8 +817,8 @@ footer a:hover {
     align-items: center;
 }
 
-.page-5-body {
-    width: 73.5%;
+#organick .page-5-body {
+    width: 73%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -826,14 +826,14 @@ footer a:hover {
     gap: 50px;
 }
 
-.page-5-text-container {
+#organick .page-5-text-container {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.page-5-italic-green {
+#organick .page-5-italic-green {
     color: var(--clr-green);
     font-family: var(--ff-italic);
     font-size: 36px;
@@ -842,7 +842,7 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-5-h1-white {
+#organick .page-5-h1-white {
     color: white;
     font-family: var(--ff-roboto);
     font-size: 50px;
@@ -851,7 +851,7 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-5-button {
+#organick .page-5-button {
     background-color: var(--clr-yellow);
     border-radius: 16px;
     width: 256px;
@@ -865,16 +865,16 @@ footer a:hover {
 }
 
 /********************* page-6 styless section ***********************/
-.page-6 {
+#organick .page-6 {
     width: 100%;
     height: 95vh;
 }
 
-.page-6-body {
+#organick .page-6-body {
     position: relative;
 }
 
-.page-6-background-half-box-1 {
+#organick .page-6-background-half-box-1 {
     width: 50%;
     height: 95vh;
     background-image: url('../img/main/page-6-background.jpg');
@@ -882,7 +882,7 @@ footer a:hover {
     background-size: cover;
 }
 
-.page-6-content-box {
+#organick .page-6-content-box {
     width: 42vw;
     height: 73vh;
     position: absolute;
@@ -898,7 +898,7 @@ footer a:hover {
     gap: 3vh;
 }
 
-.page-6-content {
+#organick .page-6-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -906,7 +906,7 @@ footer a:hover {
     gap: 1vh;
 }
 
-.page-6-italic-green {
+#organick .page-6-italic-green {
     color: var(--clr-green);
     font-family: var(--ff-italic);
     font-size: 36px;
@@ -915,7 +915,7 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-6-h1 {
+#organick .page-6-h1 {
     color: var(--clr-blue);
     font-family:  var(--ff-roboto);
     font-size: 50px;
@@ -924,7 +924,7 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-6-span {
+#organick .page-6-span {
     color: var(--clr-blue);
     font-family: var(--ff-roboto);
     font-size: 25px;
@@ -933,7 +933,7 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-6-p {
+#organick .page-6-p {
     color: var(--clr-black);
     font-family: var(--ff-open-sans);
     font-size: 18px;
@@ -943,7 +943,7 @@ footer a:hover {
 }
 
 /********************* page-7 styless section ***********************/
-.page-7 {
+#organick .page-7 {
     width: 100%;
     height: 90vh;
     display: flex;
@@ -952,7 +952,7 @@ footer a:hover {
     background-color: #F1F8F4;
 }
 
-.page-7-body {
+#organick .page-7-body {
     width: 100%;
     height: 60vh;
     display: flex;
@@ -960,9 +960,9 @@ footer a:hover {
     align-items: center;
 }
 
-.page-7-box-1,
-.page-7-box-2,
-.page-7-box-3 {
+#organick .page-7-box-1,
+#organick .page-7-box-2,
+#organick .page-7-box-3 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -972,19 +972,19 @@ footer a:hover {
     background-size: cover;
 }
 
-.page-7-box-1 {
+#organick .page-7-box-1 {
     background-image: url('../img/main/page-7-background-img-1.svg');
 }
 
-.page-7-box-2 {
+#organick .page-7-box-2 {
     background-image: url('../img/main/page-7-background-img-2.svg');
 }
 
-.page-7-box-3 {
+#organick .page-7-box-3 {
     background-image: url('../img/main/page-7-background-img-3.svg');
 }
 
-.page-7-content {
+#organick .page-7-content {
     width: 320px;
     height: 96px;
     display: flex;
@@ -1000,7 +1000,7 @@ footer a:hover {
     line-height: normal;
 }
 /********************* page-8 styless section ***********************/
-.page-8 {
+#organick .page-8 {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -1008,45 +1008,88 @@ footer a:hover {
     align-items: center;
 }
 
-.page-8-body {
-    width: 70%;
+#organick .page-8-body {
+    width: 73%;
     height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 4vh;
 }
 
-.page-8-content-box,
-.page-8-container {
+#organick .page-8-content-box,
+#organick .page-8-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: end;
 }
 
-.page-8-date-box {
+.page-8-inner-box {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    column-gap: .5vw;
+}
+
+#organick .page-8-text-box {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1vh;
+}
+
+#organick .page-8-date-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: min(5vw, 8vh);
+    height: min(8vh, 5vw);
+    background-color: white;
+    border-radius: 50%;
 }
 
-.page-8-box-1,
-.page-8-box-2 {
+#organick .page-8-box-1,
+#organick .page-8-box-2 {
+    display: flex;
+    justify-content: start;
+    align-items: start;
     width: 48.5%;
     height: 50vh;
     border-radius: 1.5vw;
+    padding: 4vh 1.5vw;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
-.page-8-box-1 {
+#organick .page-8-box-1 {
     background-image: url('../img/main/page-8-background-1.svg');
 }
-.page-8-box-2 {
+#organick .page-8-box-2 {
     background-image: url('../img/main/page-8-background-2.svg');
+}
+
+#organick .page-8-absolute-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 2vh;
+    position: absolute;
+    background-color: white;
+    bottom: -6vh;
+    border-radius: 32px;
+    box-shadow: 0 1px 30px #b1b0b092;
+    width: calc(100% - 3.4vw);
+    height: 62%;
+    padding: 46px 57px 60px 57px;
+    border-radius: 31px 34px 30px 30px;
+    box-shadow: 0px 20px 35px 0px rgba(167, 167, 167, 0.25);
 }
 
 /* fonts */
 
-.page-8-italic-green {
+#organick .page-8-italic-green {
     color: var(--clr-green);
     font-family: var(--ff-italic);
     font-size: 36px;
@@ -1055,16 +1098,17 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-8-content-h1 {
+#organick .page-8-content-h1 {
     color: var(--clr-blue);
     font-family: var(--ff-roboto);
     font-size: 50px;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
+    width: 702px;
 }
 
-.page-8-date-span-1 {
+#organick .page-8-date-span-1 {
     color: var(--clr-blue);
     text-align: center;
     font-family: var(--ff-roboto);
@@ -1074,13 +1118,75 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-8-date-span-2 {
+#organick .page-8-date-span-2 {
     color: var(--clr-blue);
     font-family: var(--ff-roboto);
     font-size: 20px;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
+}
+
+#organick .page-8-more-new-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5vw;
+    color: var(--clr-blue);
+    font-family: var(--ff-roboto);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 220px;
+    height: 80px;
+    border-radius: 16px;
+    border: 2px solid var(--clr-blue);
+    background: #FFF;
+}
+
+#organick .page-8-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5vw;
+    width: 220px;
+    height: 80px;
+    background-color: var(--clr-yellow);
+    border-radius: 16px;
+    color: var(--clr-blue);
+    font-family: var(--ff-roboto);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+#organick .page-8-user-name {
+    color: var(--clr-blue);
+    font-family: var(--ff-roboto);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#organick .page-8-h1 {
+    color: var(--clr-blue);
+    font-family: var(--ff-roboto);
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+#organick .page-8-p {
+    color: var(--clr-black);
+    font-family: var(--ff-open-sans);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%; /* 29.772px */
 }
 
 /**************************************************************************************************/
@@ -1167,7 +1273,7 @@ footer a:hover {
 }
 
 .footer-form-container {
-    width: 70%;
+    width: 73%;
     height: 30vh;
     padding: min(7vh, 3.7vw);
     display: flex;
@@ -1293,7 +1399,7 @@ footer a:hover {
 
 .footer-form-input {
     padding-left: min(2vh, 1vw);
-    width: min(32vh, 17vw);
+    width: min(33vh, 18vw);
     height: min(7.5vh, 4.3vw);
     border-radius: min(1.5vh, .8vw);
     color: var(--clr-gray);
